# ot-harjoitustyo

./: .gitignore  README.md
documentation/: vaatimusmaarittely.md
game/: .coveragerc  .pylintrc  pyproject.toml  tasks.py  tuntikirjanpito.md
game/code/: koodi.py
game/documentation/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
game/src/: characters.db  database_creator.py  game.py  main_code.py
game/src/Battle/: battle.py
game/src/Classes/: area.py  character.py  items.py  monster.py  skills.py
game/src/Databases/: characters.db  database_creator.py
game/src/Maps/: map.py
game/src/StartGame/: characters.py  map.py  render.py
game/src/UI/: action.py  area.py  battle.py  move.py  render.py
game/src/tests/: StartGame_test.py  characterClass_test.py  character_test.py  game_test.py  skill_test.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
